--- a/exoplayer-codelab-00/player-lib/src/main/res/layout/activity_player.xml
+++ b/exoplayer-codelab-00/player-lib/src/main/res/layout/activity_player.xml
@@ -16,4 +16,11 @@ limitations under the License. -->
     android:layout_height="match_parent"
     android:background="#000000">
 
+  <com.google.android.exoplayer2.ui.PlayerView
+    android:id="@+id/video_view"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
+  </com.google.android.exoplayer2.ui.PlayerView>
+
 </FrameLayout>
